force-app/main/default/objects/Intel_Skill__c/Intel_Skill__c.object-meta.xml
<CustomObject>
    <label>Intel Skill</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intel Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>