force-app/main/default/objects/Intel_Skill__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>