force-app/main/default/objects/Intel_Skill__c/fields/Intel_Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Intel_Skill_Name__c</fullName>
    <label>Intel Skill Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>