force-app/main/default/objects/Intel_Skill__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <label>Last Update</label>
    <type>DateTime</type>
</CustomField>