force-app/main/default/objects/Intel_Skill__c/fields/Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>Skill_Id__c</fullName>
    <externalId>true</externalId>
    <label>Skill Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>