force-app/main/default/objects/Intel_Skill__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&apos;active&apos;</defaultValue>
    <label>status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>